--- a/index.html
+++ b/index.html
@@ -15,7 +15,64 @@
     <link rel="shortcut icon" href="saudimade.png">
     <link href="css/main.css" rel="stylesheet">
     <title>test</title>
+   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.CLOUDS2.min.js"></script>-->
 </head>
+<!--
+<script>
+    var setVanta = () => {
+        if (window.VANTA) {
+            window.VANTA.CLOUDS2({
+                el: ".s-page-1 .s-section-1 .s-section",
+                mouseControls: true,
+                touchControls: true,
+                gyroControls: false,
+                minHeight: 200.00,
+                minWidth: 200.00,
+                scale: 1.00,
+                backgroundColor: 0xac5858,
+                skyColor: 0x29acf2,
+                texturePath: "./gallery/noise.png"
+            });
+        }
+    };
+
+    // Ensure _strk is defined
+    window._strk = window._strk || [];
+
+    _strk.push(function() {
+        setVanta();
+        if (window.edit_page && window.edit_page.Event) {
+            window.edit_page.Event.subscribe("Page.beforeNewOneFadeIn", setVanta);
+        }
+    });
+</script>
+-->
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
+<script>
+var setVanta = ()=>{
+if (window.VANTA) window.VANTA.GLOBE({
+  el: ".s-page-1 .s-section-1 .s-section",
+  mouseControls: true,
+  touchControls: true,
+  gyroControls: false,
+  minHeight: 200.00,
+  minWidth: 200.00,
+  scale: 1.00,
+  scaleMobile: 1.00
+})
+}
+_strk.push(function() {
+  setVanta()
+  window.edit_page.Event.subscribe( "Page.beforeNewOneFadeIn", setVanta )
+})
+</script>
+
+
 
 <body>
     <canvas id="gradient"></canvas>
@@ -48,5 +105,7 @@
 <script src="js/lib/granim.min.js"></script>
 <script src="js/lib/smooth-scrollbar.js"></script>
 <script type="module" src="js/main.js"></script>
+
+
 
 </html>
