--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         }
     });
 </script>
--->
+
 
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>-->
 <script>
 var setVanta = ()=>{
 if (window.VANTA) window.VANTA.GLOBE({
@@ -66,10 +66,10 @@ if (window.VANTA) window.VANTA.GLOBE({
   scaleMobile: 1.00
 })
 }
-_strk.push(function() {
-  setVanta()
-  window.edit_page.Event.subscribe( "Page.beforeNewOneFadeIn", setVanta )
-})
+//_strk.push(function() {
+ // setVanta()
+ // window.edit_page.Event.subscribe( "Page.beforeNewOneFadeIn", setVanta )
+//})
 </script>
 
 
@@ -98,11 +98,11 @@ _strk.push(function() {
             <div></div>
             <div></div>
         </div>
-        <h2><strong>انتضر</strong></h2>
+        <h2><strong>...تحميل</strong></h2>
     </div>
 </div>
 
-<script src="js/lib/granim.min.js"></script>
+<!--<script src="js/lib/granim.min.js"></script>-->
 <script src="js/lib/smooth-scrollbar.js"></script>
 <script type="module" src="js/main.js"></script>
 
